# glamod-marine-processing

./: .gitignore  .pre-commit-config.yaml  .pylintrc.toml  .zenodo.json  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  README_BRANCH_OBS_SUITE_R2  environement.yml  environment.yml  pyproject.toml
.github/: labeler.yml
.github/workflows/: cache-cleaner.yml  ci.yml  codeql-analysis.yml  codeql.yml  dependency-review.yml  first-pull-request.yml  label-on-approval.yml  label.yml  labeler.yml  testing_suite.yml
CI/: requirements_ci.txt
ci/requirements/: docs.yml  environment.yml  requirements.txt  requirements_md.txt  requirements_qc.txt
config-suite/: requirements.txt
config-suite/modules/: imma_noc.py
config-suite/scripts/: concat_annual.py  sources.py  stations.py
configuration_files/: config.json
docs/: Figures.pptx  Makefile  conf.py  file-system.rst  index.rst  level1a.rst  level1b.rst  level1c.rst  level1d.rst  level1e.rst  level2.rst  make.bat  merge.rst  new-data-release.rst  post-processing.rst  pre-processing.rst  processing-level.rst  qc.rst  r092019_000000_log.xlsx  split.rst  tool-set-up.rst
docs/config_files/: level1a.json  level1b.json  level1c.json  level1d.json  level1e.json  level2.json  source_deck_periods.json
docs/figures/: figures.pptx
docs/source/: index.rst
glamod_marine_processing/: __init__.py  cli.py  cli_cf.py  cli_md.py  cli_merge.py  cli_obs.py  cli_postproc.py  cli_preproc.py  cli_qc.py  cli_split.py  utilities.py
glamod_marine_processing/config_suite/: .gitignore  __init__.py  setenv0.sh
glamod_marine_processing/configuration_files/: __init__.py  config_bastion.json  config_kay.json  config_meluxina.json
glamod_marine_processing/merge/: __init__.py  merge.py
glamod_marine_processing/metadata_suite/: .gitignore  __init__.py  setenv0.sh
glamod_marine_processing/obs_suite/: __init__.py  compare_migration.sh  setenv3.sh
glamod_marine_processing/post_processing/: __init__.py  post_processing.py
glamod_marine_processing/pre_processing/: __init__.py  pre_processing.py
glamod_marine_processing/preprocessing/: __init__.py  config_R3.0.0T.json  config_R3.0.2T.json  main.py
glamod_marine_processing/qc_suite/: LICENSE.md  __init__.py
glamod_marine_processing/split/: __init__.py  split.py
metadata-suite/: README  requirements.txt  setenv0.sh
metadata-suite/config/: config.json  config_lotus.json  corrections.json  countries.json  jobs.json  master.json
metadata-suite/lotus_scripts/: submit_merge.sh  submit_split.sh
metadata-suite/modules/: pub47.py  soundex.py
metadata-suite/scripts/: combine_master_files.py  extract_for_cds.py  merge_countries.py  split_pub47.py
obs-suite/: .gitignore  compare_migration.sh  set_paths_rc.sh  set_paths_rc.sh~  setenv0.sh  setenv1.sh  setenv3.sh  setpaths.sh  setpaths_sb.sh  tst_run.sh
obs-suite/configuration_files/: deck_list_1946_onwards.txt  failed_TS.txt  r092019_000000_l1a_buoy_decks.json  r092019_000000_l1a_jobs.txt  r092019_000000_l1a_ship_decks.json  r092019_000000_l1b_corrections.json  r092019_000000_list.txt  r092019_000000_list_initial.txt  r092019_000000_list_out_by_period_from_initial.txt  rMigration_000000_list1.txt
obs-suite/lotus_scripts/: array_output_hdlr.py  config_array.py  level1a.json  level1a_slurm.py  level1a_slurm_sb.py  level1b_slurm.py  level1b_slurm_sb.py  level1c_slurm.py  level1d_slurm.py  level1e_slurm.py  level2_addPub47_slurm.py  level2_slurm.py  lotus_paths.py
obs-suite/pyenvs/: .gitignore  requirements_env2.txt  requirements_env3.txt  requirements_ichec.txt  requirements_runing.txt
obs-suite/reports/: deck_properties.json  pdf_report_jinja_launcher.sh  pdf_report_jinja_level1e.py  pdf_report_jinja_level2.py  pdf_report_jinja_ws.py  report_io.py  report_io_launcher.sh  report_map_figures.py  report_map_figures_launcher.sh  report_map_merged.py  report_map_merged_launcher.sh  report_maps_merge.py  report_maps_merge_launcher.sh  report_ts_lat_bands.py  report_ts_lat_bands_launcher.sh  report_ts_lat_bands_launcher_failed.sh
obs-suite/scripts/: L0_main.py  L1a_launcher.sh  L1a_main.py  L1a_main_job.sh  L1b_launcher.sh  L1b_main_dup_merge.py  L1b_main_ingest.sh  L1b_merge.py  L1b_merge_job.sh  L1c_launcher.sh  L1c_main.py  L1c_main_job.sh  L1d_launcher.sh  L1d_main.py  L1d_main_job.sh  L1e_launcher.sh  L1e_main.py  L1e_main_job.sh  L1e_maps_repeat.py  L1e_maps_repeat_buoys_cdmlite.py  L1e_maps_repeat_buoys_cdmlite_job.sh  L1e_maps_repeat_buoys_cdmlite_launcher.sh  L1e_maps_repeat_job.sh  L1e_maps_repeat_launcher.sh  L2_launcher.sh  L2_list_create.py  L2_main.py  bsub_array_output_hdlr.sh  clean_level1a.sh  clean_level1b.sh  clean_level1c.sh  clean_level1d.sh  clean_level1e.sh  clean_level_data.sh  config_array.py  datepos.out  dir_exists.sh  level1a.py  level1a_rc.py  (+39 more)
pre-processing/: config.json  config_R3.0.0T.json  config_R3.0.2T.json  main.py
qc-suite/: requirements.txt  setenv0.sh
tests/: _load_data.py  _settings.py  _settings_CRAID.py  _settings_CRAID12.py  _settings_CRAID_12.py  _settings_ICOADS.py  _settings_ICOADS300.py  _settings_ICOADS302.py  _settings_ICOADS_300.py  _settings_ICOADS_302.py  _test_qc_on_db.py  _testing_suite.py  test_astronomical_geometry.py  test_blacklisting.py  test_buddy_check.py  test_calc_hums.py  test_calculate_humidity.py  test_decorators.py  test_external_clim.py  test_get_clim.py  test_icoads_identify.py  test_interpolation.py  test_levels.py  test_location_control.py  test_marine_processing.py  test_multiple_row_check.py  test_next_level_qc.py  test_obssuite.py  test_qc.py  test_qc_functions.py  test_qc_on_db.py  test_row_check.py  test_spherical_geometry.py  test_statistics.py  test_time_control.py  test_track_check.py  test_track_check_qc_functions.py  test_trackqc.py
user-manual/: .gitignore  add_release_summaries_tree.py  add_um_tree.py  check_cp.sh  merge_release_config.py  merge_release_data.py  merge_release_data_launcher.sh  merge_releases_config.py  merge_releases_level2.py  process_array_output_hdlr.py  setenv0.sh  setenv2.sh  setpaths.sh
(+940 files in other folders)
