[build-system]
requires = ["flit_core >=3.9,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "glamod_marine_processing"
description = "GLAMOD marine processing toolbox"
authors = [
  {name = "Ludwig Lierhammer", email = "ludwig.lierhammer@dwd.de"}
]
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["glamod_marine_processing"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
dynamic = ["version"]
dependencies = [
  "cdm_reader_mapper"
]

[project.optional-dependencies]
obs = ["simplejson"]
qc = []
all = ["glamod_marine_processing[obs]", "glamod_marine_processing[qc]"]

[project.scripts]
qc_suite = "glamod_marine_processing.cli_qc:qc_cli"
obs_suite = "glamod_marine_processing.cli_obs:obs_cli"
pre_proc = "glamod_marine_processing.cli_preproc:pre_proc_cli"
post_proc = "glamod_marine_processing.cli_postproc:post_proc_cli"

[project.urls]
"Homepage" = "https://glamod-marine-processing.readthedocs.io"
"Source" = "https://github.com/glamod/glamod-marine-processing"
"Changelog" = "https://glamod-marine-processing.readthedocs.io/en/latest/history.html"
"Issue tracker" = "https://github.com/glamod/glamod-marine-processing"

[tool]

[tool.black]
target-version = [
  "py39",
  "py310",
  "py311",
  "py312"
]

[tool.bumpversion]
commit = true
commit_args = "--no-verify"
tag = false
allow_dirty = false
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(\\-(?P<release>[a-z]+)(\\.(?P<build>\\d+)))?"
serialize = [
  "{major}.{minor}.{patch}-{release}.{build}",
  "{major}.{minor}.{patch}"
]

[[tool.bumpversion.files]]
filename = "glamod_marine_processing/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[tool.bumpversion.parts.build]
independent = false

[tool.bumpversion.parts.release]
optional_value = "release"
values = [
  "dev",
  "release"
]

[tool.codespell]
ignore-words-list = "freez, fO, ND, BUID, SME, ASII, inpt"
skip = "glamod_marine_processing/qc_suite/imma/*.json, tests/*.py, glamod_marine_processing/qc_suite/imma/code_tables/*"

[tool.coverage.run]
relative_files = true
omit = ["tests/*.py"]

[tool.deptry]
extend_exclude = ["docs"]
ignore_notebooks = true
pep621_dev_dependency_groups = ["all", "dev", "docs"]

[tool.deptry.package_module_name_map]
"scikit-learn" = "sklearn"
"pyyaml" = "yaml"

[tool.deptry.per_rule_ignores]
DEP001 = ["SBCK"]
DEP002 = ["bottleneck", "pyarrow"]
DEP004 = ["matplotlib", "pytest_socket"]

[tool.flit.sdist]
include = [
  "AUTHORS.rst",
  "CHANGES.rst",
  "CONTRIBUTING.rst",
  "LICENSE",
  "Makefile",
  "README.rst",
  "ci/requirements/requirements.txt",
  "ci/requirements/requirements_ob.txt",
  "ci/requirements/requirements_qc.txt",
  "docs/Makefile",
  "docs/make.bat",
  "tests/**/*.py"
]
exclude = [
  "**/*.py[co]",
  "**/__pycache__",
  ".*",
  "docs/_*",
  "docs/modules.rst",
  "pylintrc"
]

[tool.isort]
profile = "black"
py_version = 310
append_only = true
add_imports = "from __future__ import annotations"

[tool.mypy]
python_version = 3.10
show_error_codes = true
warn_return_any = true
warn_unused_configs = true
plugins = ["numpy.typing.mypy_plugin"]

[[tool.mypy.overrides]]
module = [
  "boltons.*",
  "cftime.*",
  "jsonpickle.*",
  "numba.*",
  "pytest_socket.*",
  "SBCK.*",
  "scipy.*",
  "sklearn.*",
  "statsmodels.*",
  "yamale.*",
  "yaml.*"
]
ignore_missing_imports = true

[tool.pytest]
python_files = "test_*.py"
testpaths = ["./tests"]

[tool.ruff]
src = ["glamod_marine_processing"]
line-length = 150
target-version = "py39"
exclude = [
  ".git",
  "build",
  ".eggs"
]
extend-include = [
  "*.ipynb" # Include notebooks
]

[tool.ruff.format]
line-ending = "auto"

[tool.ruff.lint]
extend-select = [
  "RUF022" # unsorted-dunder-all
]
ignore = [
  "D205", # blank-line-after-summary
  "D400", # ends-in-period
  "D401", # non-imperative-mood
  "S605", # starting process with shell
  "S404", # subprocess module is insecure
  "S602", # subprocess call with shell is True
  "S603" # subprocess call with untrusted input
]
preview = true
select = [
  "C90", # mccabe-complexity
  "D", # docstrings
  "E", # pycodestyle errors
  "F", # pyflakes
  "N802", # invalid-function-name
  "S", # bandit
  "W" # pycodestyle warnings
]

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true

[tool.ruff.lint.isort]
known-first-party = ["glamod_marine_processing"]
case-sensitive = true
detect-same-package = false
lines-after-imports = 2
no-lines-before = ["future"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"docs/*.py" = ["D100", "D101", "D102", "D103"]
"tests/**/*test*.py" = ["D100", "D101", "D102", "D103", "N802", "S101"]
"glamod_marine_processing/**/__init__.py" = ["F401", "F403"]
"glamod_marine_processing/qc_suite/modules/*.py" = ["S101"]
"glamod_marine_processing/obs_suite/scripts/*.py" = ["S105"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 180

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.vulture]
exclude = []
ignore_decorators = ["@pytest.fixture"]
ignore_names = []
min_confidence = 90
paths = ["glamod_marine_processing", "tests"]
sort_by_size = true
